# Behavioral_S10_LLMAgents

./: .env.example  .gitignore  README.md  pyproject.toml  setup.ps1  test_mcp_connection.py
.cursor/: mcp.json
Libraries/ABxM.Agentic.MCP/: ABxM.Agentic.MCP.Host.deps.json  ABxM.Agentic.MCP.deps.json  ABxM.Agentic.MCP.gha  ABxM.Core.xml
examples/: task_template.gh
notebooks/: react_agent_finished.ipynb  react_agent_student.ipynb
